@@ -23,8 +23,8 @@ import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 
 import org.springframework.data.annotation.Persistent;
-import org.springframework.data.crate.core.mapping.schema.ColumnPloicy;
-import static org.springframework.data.crate.core.mapping.schema.ColumnPloicy.*;
+import org.springframework.data.crate.core.mapping.schema.ColumnPolicy;
+import static org.springframework.data.crate.core.mapping.schema.ColumnPolicy.*;
 
 /**
  * Identifies a domain object to be persisted to Crate.
@@ -42,5 +42,5 @@ public @interface Table {
 	String name() default "";
 	String numberOfReplicas() default "1";
 	int refreshInterval() default 1000;
-	ColumnPloicy columnPolicy() default DYNAMIC;
+	ColumnPolicy columnPolicy() default DYNAMIC;
 }
