@@ -18,7 +18,7 @@ package org.springframework.data.crate.core.sql;
 import static java.util.Arrays.asList;
 import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.assertThat;
-import static org.springframework.data.crate.core.mapping.schema.ColumnPloicy.STRICT;
+import static org.springframework.data.crate.core.mapping.schema.ColumnPolicy.STRICT;
 
 import java.util.Map;
 import java.util.Set;
